# learnfastapi

./: .gitignore  README.md  pyproject.toml
backend/: main.py  test_db.db
backend/apis/: base.py
backend/apis/general_pages/: route_homepage.py
backend/apis/version1/: route_jobs.py  route_login.py
backend/core/: config.py
backend/db/: session.py  stack.yml
backend/db/repository/: jobs.py
backend/schemas/: jobs.py  users.py
backend/templates/components/: navbar.html
backend/templates/shared/: base.html
backend/tests/test_routes/: test_jobs.py
