[tool.poetry]
name = "learnfastapi"
version = "0.1.0"
description = ""
authors = ["John <mail@mrjohntan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
jinja2 = "^3.1.2"
uvicorn = "^0.19.0"
aiofiles = "^22.1.0"
sqlalchemy = "^1.4.42"
psycopg2-binary = "^2.9.4"
python-dotenv = "^0.21.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
python-multipart = "^0.0.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
pytest = "^7.1.3"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
